--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>waseela</h1>
+    <h1>Waseela</h1>
     <form class="form">
         <input type="text" class="input" placeholder="Enter your task" autocomplete="off">
         <ul class="list">
